--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 click==8.0.1
 colorama==0.4.4
+Command==0.1.0
 Flask==2.0.1
-Flask-MySQL==1.5.2
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.1
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
-PyMySQL==1.0.2
+mysql-connector-python==8.0.25
+psycopg2==2.9.1
+SQLAlchemy==1.4.22
 Werkzeug==2.0.1
